# fuck_unipus

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/core/: decrypt.rs  html_parser.rs  mod.rs  unipus.rs
src/error/: mod.rs  unipus.rs
src/http/: auth_middleware.rs  decrypt_middleware.rs  mod.rs  random_headers.rs
src/model/: captcha_response.rs  class_block.rs  mod.rs  session_info.rs  sso_login_response.rs
src/utils/: input.rs
