[package]
name = "fuck_unipus"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "cookies"] }  # HTTP client for making requests
scraper = "0.23.1"  # HTML parser to scrape the content from the web pages
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization framework
serde_json = "1.0"  # JSON handling with Serde
tokio = { version = "1", features = ["full"] }  # Async runtime for handling async operations
rpassword = "7.3.1"
log = "0.4.27"
base64 = "0.22.1"
cookie = "0.18.1"
url = "2.5.4"
cookie_store = "0.21.1"
reqwest_cookie_store = "0.8.0"
